refactored registration and guest area

--- a/app/views/page/contact.html.erb
+++ b/app/views/page/contact.html.erb
@@ -1,2 +1,9 @@
 <h1>Contact</h1>
-<p>This is the contact page</p>
+<p>You can contact me on</p>
+<div style="display: table;">
+  <div style="float: left;"><a title="Xing" href="http://www.xing.com/profile/Robert_Reiz"><img class="aligncenter size-full wp-image-866" title="Xing" src="http://robreiz.files.wordpress.com/2011/02/unknown.jpeg" alt="Xing" width="32" height="32" /></a></div>
+  <div style="float: left;"><a title="LinkedIn" href="http://www.linkedin.com/in/robertreiz"><img class="aligncenter size-full wp-image-857" title="linkedIn" src="http://robreiz.files.wordpress.com/2011/02/linkedin.png" alt="" width="32" height="32" /></a></div>
+</div>
+
+
+
