--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Version Feed</h1>
+<h1>Radioactive Map</h1>
 
 <% if signed_in? %>
   <table class="front" summary="For signed-in users">
@@ -17,7 +17,7 @@
 <% else %>
     <p>
         This is the home page for the
-        <a href="http://radioactivemap.com/">Version Feed</a>
+        <a href="http://radioactivemap.com/">Radioactive Map</a>
     </p>
     <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 <% end %>
