--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,11 @@
 		<ul>
 			<li><%= link_to "Home", home_path %></li>
             <% if signed_in? %>
-                <li><%= link_to "Users", users_path %></li>
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+
+                    <li><%= link_to "Users", users_path %></li>
+
+                <li><%= link_to "Profile", user_path(current_user.username) %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user.username) %></li>
                 <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
             <% end %>
             <% if !signed_in? %>
