--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,9 @@
 <h1>About</h1>
-<p>This is the about page</p>
+<p>
+  Radioactive Map is a site for collecting data about radiation measurements on our planet.
+  You can easily post a radiation measurement for a special location on earth.
+</p>
+<p>
+  This site is a beta version.
+</p>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
