--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,8 +1,8 @@
 <div class="user_info">
-  <a href="<%= user_path(current_user) %>">
+  <a href="<%= user_path(current_user.username) %>">
     <%= gravatar_for current_user, :size => 30 %>
     <span class="user_name">
-      <%= current_user.name %>
+      <%= current_user.fullname %>
     </span>
     <span class="microposts">
       <%= pluralize(current_user.microposts.count, "micropost") %>
