--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,8 +3,8 @@
 <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
@@ -13,10 +13,6 @@
   <div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirmation" %><br />
-    <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions">
     <%= f.submit "Update" %>
