--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <td class="main">
       <h1>
         <%= gravatar_for @user %>
-        <%= @user.name %>
+        <%= @user.fullname %>
       </h1>
       <%= render 'follow_form' if signed_in? %>
       <% unless @user.microposts.empty? %>
@@ -14,7 +14,7 @@
       <% end %>
     </td>
     <td class="sidebar round">
-      <strong>Name</strong> <%= @user.name %><br />
+      <strong>Name</strong> <%= @user.fullname %><br />
       <strong>URL</strong>  <%= link_to users_path(@user), @user %><br/>
       <strong>Microposts</strong> <%= @user.microposts.count %>
     </td>
