replaced tables through divs

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,8 +1,8 @@
 
 <%= form_for @micropost do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
-  <div class="field">
-    <%= f.text_area :content %>
+  <div class="field " >
+    <%= f.text_area :content, :class => "postField" %>
   </div>
   <div class="actions">
     <%= f.submit "Submit" %>
