--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,8 +1,21 @@
-<tr>
-  <td class="micropost">
-    <span class="content"><%= micropost.content %></span>
+<div class="posting">
+  <div class="gravatar">
+    <%= gravatar_for(current_user) %>
+  </div>
+  <div class="micropost">
+    <span class="user">
+      <%= current_user.fullname %>
+    </span><br/>
+    <span >
+      <%= micropost.content %>
+    </span><br/>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+      <% if current_user?(micropost.user) %>
+            <%= link_to "delete", micropost, :method => :delete,
+                                             :confirm => "You sure?",
+                                             :title => micropost.content %>
+      <% end %>
     </span>
-  </td>
-</tr>
+  </div>
+</div>
