--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,6 @@
 <% unless @feed_items.empty? %>
-  <table class="microposts" summary="User microposts">
+  <div style="display: table;" class="microposts">
     <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
-  </table>
+  </div>
   <%= will_paginate @feed_items %>
 <% end %>
