--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,21 +1,21 @@
-<tr>
-  <td class="gravatar">
+<div class="posting">
+  <div class="gravatar">
     <%= link_to gravatar_for(feed_item.user), feed_item.user %>
-  </td>
-  <td class="micropost">
-    <span class="user">
-      <%= link_to feed_item.user.username, feed_item.user %>
-    </span>
-    <span class="content"><%= feed_item.content %></span>
+  </div>
+  <div class="micropost">
+    <span>
+      <%= link_to feed_item.user.fullname, feed_item.user, :class => "user" %>
+    </span><br/>
+    <span >
+      <%= feed_item.content %>
+    </span><br/>
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
+      <% if current_user?(feed_item.user) %>
+            <%= link_to "delete", feed_item, :method => :delete,
+                                             :confirm => "You sure?",
+                                             :title => feed_item.content %>
+      <% end %>
     </span>
-  </td>
-  <% if current_user?(feed_item.user) %>
-  <td>
-    <%= link_to "delete", feed_item, :method => :delete,
-                                     :confirm => "You sure?",
-                                     :title => feed_item.content %>
-  </td>
-  <% end %>
-</tr>
+  </div>
+</div>
