--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,16 +1,16 @@
 <% @user ||= current_user %>
-<div class="stats">
+<div class="stats" style="clear: both;">
   <table summary="User stats">
     <tr>
       <td>
-        <a href="<%= following_user_path(@user) %>">
+        <a href="<%= following_user_path(@user.username) %>">
           <span id="following" class="stat">
             <%= @user.following.count %> following
           </span>
         </a>
       </td>
       <td>
-        <a href="<%= followers_user_path(@user) %>">
+        <a href="<%= followers_user_path(@user.username) %>">
           <span id="followers" class="stat">
             <%= pluralize(@user.followers.count, "follower") %>
           </span>
