--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,11 +1,13 @@
 <div class="user_info">
-  <a href="<%= user_path(current_user.username) %>">
-    <%= gravatar_for current_user, :size => 30 %>
-    <span class="user_name">
-      <%= current_user.fullname %>
-    </span>
-    <span class="microposts">
-      <%= pluralize(current_user.microposts.count, "micropost") %>
-    </span>
+  <a href="<%= user_path (current_user.username) %>">
+    <div style="float:left;">
+        <%= gravatar_for current_user, :size => 40 %>
+    </div>
+    <div style="padding-left: 10px; display:inline-block;">
+      <%= current_user.fullname %><br/>
+      <span style="font-size: 0.8em;">
+        <%= pluralize(current_user.microposts.count, "micropost") %>
+      </span>
+    </div>
   </a>
 </div>
