--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,18 @@
-<table class="profile" summary="Profile information">
-  <tr>
-    <td class="main">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.fullname %>
-      </h1>
-      <%= render 'follow_form' if signed_in? %>
-      <% unless @user.microposts.empty? %>
-        <table class="microposts" summary="User microposts">
-          <%= render @microposts %>
-        </table>
-        <%= will_paginate @microposts %>
-      <% end %>
-    </td>
-    <td class="sidebar round">
-      <strong>Name</strong> <%= @user.fullname %><br />
-      <strong>URL</strong>  <%= link_to users_path(@user), @user %><br/>
-      <strong>Microposts</strong> <%= @user.microposts.count %>
-    </td>
-  </tr>
-</table>
+
+    <div class="content" >
+        <h1>
+            <%= gravatar_for @user %>
+            <%= @user.fullname %>
+        </h1>
+        <%= render 'follow_form' if signed_in? %>
+        <% unless @user.microposts.empty? %>
+            <div style="display: table;" class="microposts">
+                <%= render @microposts %>
+            </div>
+            <%= will_paginate @microposts %>
+        <% end %>
+    </div>
+    <div class="sidebar round">
+        <%= render 'shared/user_info' %>
+        <%= render 'shared/stats' %>
+    </div>
