replaced all tables through divs & small improvements

--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -5,6 +5,6 @@
     <%= f.text_area :content, :class => "postField" %>
   </div>
   <div class="actions">
-    <%= f.submit "Submit" %>
+    <%= f.submit "Submit", :class => "button" %>
   </div>
 <% end %>
