--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,21 +1,19 @@
 <% @user ||= current_user %>
 <div class="stats" style="clear: both;">
-  <table summary="User stats">
-    <tr>
-      <td>
-        <a href="<%= following_user_path(@user.username) %>">
-          <span id="following" class="stat">
+
+  <div>
+    <a href="<%= following_user_path(@user.username) %>">
+        <span id="following" class="stat">
             <%= @user.following.count %> following
-          </span>
-        </a>
-      </td>
-      <td>
-        <a href="<%= followers_user_path(@user.username) %>">
-          <span id="followers" class="stat">
+        </span>
+    </a>
+  </div>
+  <div>
+    <a href="<%= followers_user_path(@user.username) %>">
+        <span id="followers" class="stat">
             <%= pluralize(@user.followers.count, "follower") %>
-          </span>
-        </a>
-      </td>
-    </tr>
-  </table>
+        </span>
+    </a>
+  </div>
+
 </div>
