--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,6 +1,5 @@
-<table summary="Information about following/followers">
-  <tr>
-    <td class="main">
+
+    <div class="content" >
       <h1><%= @title %></h1>
 
       <% unless @users.empty? %>
@@ -9,17 +8,8 @@
         </ul>
         <%= will_paginate @users %>
       <% end %>
-    </td>
-    <td class="sidebar round">
-      <strong>Name</strong> <%= @user.fullname %><br />
-      <strong>URL</strong> <%= link_to @user %><br />
-      <strong>Microposts</strong> <%= @user.microposts.count %>
-      <%= render 'shared/stats' %>
-      <% unless @users.empty? %>
-        <% @users.each do |user| %>
-          <%= link_to gravatar_for(user, :size => 30), user %>
-        <% end %>
-      <% end %>
-    </td>
-  </tr>
-</table>
+    </div>
+    <div class="sidebar round">
+        <%= render 'shared/user_info' %>
+        <%= render 'shared/stats' %>
+    </div>
