--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
   <%= javascript_include_tag :defaults %>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
 
-<body>
+<body onload="initialize()">
 	<div class="container">
 		<%= render 'layouts/header' %>
 		<section class="round" >
