--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Radioactive Map</h1>
 
 <% if signed_in? %>
-
+    <script type="text/javascript" src="/javascripts/gmap.js" ></script>
     <div class="content" >
         <h1 class="micropost">What's up?</h1>
         <%= render 'shared/micropost_form' %>
@@ -13,9 +13,15 @@
     </div>
 
 <% else %>
-    <p>
+    <script type="text/javascript" src="/javascripts/googleMaps.js" ></script>
+    <p style="text-align: center;">
         This is the home page for the
         <a href="http://radioactivemap.com/">Radioactive Map</a>
     </p>
-    <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+
+    <div id="map_canvas" class="mapOnStartPage round" ></div>
+
+    <p>
+        <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+    </p>
 <% end %>
