--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,9 @@
 
     <div class="content" >
-        <h1>
-            <%= gravatar_for @user %>
-            <%= @user.fullname %>
-        </h1>
         <%= render 'follow_form' if signed_in? %>
         <% unless @user.microposts.empty? %>
             <div style="display: table;" class="microposts">
-                <%= render @microposts %>
+                <%= render :partial => 'shared/feed_item', :collection => @microposts %>
             </div>
             <%= will_paginate @microposts %>
         <% end %>
