--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -7,8 +7,9 @@
 
 body {
     background: black;
-    background-image: url("/images/background.jpg") ;
-    background-repeat: repeat-y;
+    background-image: url("/images/background3.jpg")  ;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
@@ -290,6 +291,25 @@ ul.users {
 }
 
 
+/****** MAP **********/
+
+.mapOnStartPage{
+    width: 600px;
+    height: 500px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mapForPost{
+    width: 440px;
+    height: 150px;
+    margin-bottom: 2px;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+}
+
+
 /****** miscellaneous  ****/
 
 .field_with_errors input {
@@ -298,6 +318,23 @@ ul.users {
 
 .postField{
     width: 430px;
+    margin: 0;
+}
+
+.msph{
+    width: 100px;
+}
+
+.msphFeed{
+   font-weight: bold;
+   color: #ff4500;
+}
+
+.latlonInput{
+    border: 0px solid white;
+    padding: 0;
+    margin: 0;
+    width: 120px;
 }
 
 label{
