--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -2,7 +2,7 @@
   <div class="gravatar">
     <%= link_to gravatar_for(feed_item.user), feed_item.user %>
   </div>
-  <div class="micropost">
+  <div class="measurement">
     <span>
       <%= link_to feed_item.user.fullname, feed_item.user, :class => "user" %>
     </span><br/>
