--- a/app/views/shared/_measurement_form.html.erb
+++ b/app/views/shared/_measurement_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @micropost do |f| %>
+<%= form_for @measurement do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <%= f.hidden_field :lat %>
   <%= f.hidden_field :lon %>
