--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% unless @feed_items.empty? %>
-  <div style="display: table;" class="microposts">
+  <div style="display: table;" class="measurements">
     <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
   </div>
   <%= will_paginate @feed_items %>
