--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -2,9 +2,16 @@
 <div class="stats" style="clear: both;">
 
   <div>
-    <a href="<%= following_user_path(@user.username) %>">
-        <span id="following" class="stat">
-            <%= @user.following.count %> following
+    <a href="<%= user_path(@user.username) %>">
+        <span id="measurements" class="stat">
+            <%= pluralize(@user.measurements.count, "measurement") %>
+        </span>
+    </a>
+  </div>
+  <div>
+    <a href="#">
+        <span id="geigercounter" class="stat">
+            0 Geiger Counter
         </span>
     </a>
   </div>
@@ -12,6 +19,13 @@
     <a href="<%= followers_user_path(@user.username) %>">
         <span id="followers" class="stat">
             <%= pluralize(@user.followers.count, "follower") %>
+        </span>
+    </a>
+  </div>
+  <div>
+    <a href="<%= following_user_path(@user.username) %>">
+        <span id="following" class="stat">
+            <%= @user.following.count %> following
         </span>
     </a>
   </div>
