--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
   <%= gravatar_for user, :size => 30 %>
   <%= link_to user.fullname, user %>
   <% if current_user.admin? %>
-  | <%= link_to "delete", user, :method => :delete, :confirm => "You sure?",
+  | <%= link_to "delete", user, :method => :delete, :confirm => "You are sure?",
                                 :title => "Delete #{user.fullname}" %>
   <% end %>
 </li>
