--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <h1>Sign up</h1>
 
 <%= form_for @user do |f| %>
-    <center>
+    <div class="messages">
         <%= render 'shared/error_messages', :object => f.object %>
-    </center>
+    </div>
 
     <div style="display:table-row;">
       <div class="labelCel">
