--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -23,7 +23,7 @@
     <div id="map_canvas" class="mapOnStartPage round" ></div>
 
     <p>
-
+        <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
     </p>
 
 <% end %>
