--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>
-
-  </title>
+  <title>Radioactive Map</title>
+  <%= csrf_meta_tag %>
+  <%= render 'layouts/stylesheets' %>
+  <%= javascript_include_tag :defaults %>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 </head>
-<body>
 
+<body onload="initialize()">
+	<div class="container">
+		<%= render 'layouts/header' %>
+		<section class="round" >
+			<% flash.each do |key, value| %>
+				<div class="flash <%= key %>"><%= value %></div>
+			<% end %>
+			<%= yield %>
+		</section>
+		<%= render 'layouts/footer' %>
+		<%= debug(params) if Rails.env.development? %>
+	</div>
 </body>
+
 </html>
