clean up javascript

--- a/app/views/shared/_measurement_form.html.erb
+++ b/app/views/shared/_measurement_form.html.erb
@@ -9,7 +9,7 @@
     , Lon:
     <input id="show_lon" class="latlonInput" type="text" style="border: 0; margin: 0" size="30" disabled="disabled">
   </div>
-  <div id="map_canvas" class="mapForPost round" ></div>
+  <div id="map_for_measurement" class="mapForPost round" ></div>
   <div>
     <%= f.text_field :msph, :class => "round msph" %> <%= f.label :email, "Microsievert per hour" %>
   </div>
