--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -7,7 +7,7 @@
 
 body {
     background: black;
-    background-image: url("/images/background3.jpg")  ;
+    background-image: url("/images/background.jpg")  ;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
