--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= render 'layouts/stylesheets' %>
   <%= javascript_include_tag :defaults %>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script type="text/javascript" src="/javascripts/gmap.js" ></script>
 </head>
 
 <body onload="initialize()">
