--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,7 +1,6 @@
 
 <% if signed_in? %>
 
-    <script type="text/javascript" src="/javascripts/gmap.js" ></script>
     <div class="content" >
         <h1 class="measurement">What's your radiation level?</h1>
         <%= render 'shared/measurement_form' %>
@@ -14,13 +13,12 @@
 
 <% else %>
 
-    <script type="text/javascript" src="/javascripts/googleMaps.js" ></script>
     <p style="text-align: center;">
         This is the home page for the
         <a href="http://radioactivemap.com/">Radioactive Map</a>
     </p>
 
-    <div id="map_canvas" class="mapOnStartPage round" ></div>
+    <div id="map_for_landing_page" class="mapOnStartPage round" ></div>
 
     <p>
         <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
