--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -11,7 +11,11 @@
   <div>
     <a href="#">
         <span id="geigercounter" class="stat">
-            0 Geiger Counter
+            <% if @user.geigercounter.nil? %>
+                0 Geigercounter
+            <% else %>
+                1 Geigercounter
+            <% end %>
         </span>
     </a>
   </div>
@@ -20,14 +24,24 @@
         <span id="followers" class="stat">
             <%= pluralize(@user.followers.count, "follower") %>
         </span>
-    </a>
+    </a><br/>
+    <% if !@followers.nil? %>
+        <% @followers.each do | follower | %>
+            <%= gravatar_for follower, :size => 20 %>
+        <% end %>
+    <% end %>
   </div>
   <div>
     <a href="<%= following_user_path(@user.username) %>">
         <span id="following" class="stat">
             <%= @user.following.count %> following
         </span>
-    </a>
+    </a><br/>
+    <% if !@following.nil? %>
+        <% @following.each do | following | %>
+            <%= gravatar_for following, :size => 20 %>
+        <% end %>
+    <% end %>
   </div>
 
 </div>
