--- a/app/views/users/new_geiger.html.erb
+++ b/app/views/users/new_geiger.html.erb
@@ -5,6 +5,10 @@
             <%= render 'shared/error_messages', :object => f.object %>
         </div>
 
+        <p style="text-align:center;">
+          Upload a Image of you Geieger Counter and give him/her a name.
+        </p>
+
         <div style="display: table;" >
           <div style="display:table-row;">
             <div class="labelCel">
