--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,27 +1,10 @@
 
 <% if signed_in? %>
 
-    <div class="content" >
-        <h1 class="measurement">What's your radiation level?</h1>
-        <%= render 'shared/measurement_form' %>
-        <%= render 'shared/feed' %>
-    </div>
-    <div class="sidebar round">
-        <%= render 'shared/user_info' %>
-        <%= render 'shared/stats' %>
-    </div>
+    <%= render 'users/home_login' %>
 
 <% else %>
 
-    <p style="text-align: center;">
-        This is the home page for the
-        <a href="http://radioactivemap.com/">Radioactive Map</a>
-    </p>
-
-    <div id="map_for_landing_page" class="mapOnStartPage round" ></div>
-
-    <p>
-        <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
-    </p>
+    <%= render 'users/home_guest' %>
 
 <% end %>
