--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
   <nav class="round">
     <ul>
       <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Privacy Policy / Terms", terms_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
