--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -55,6 +55,18 @@
     </div>
 
     <div style="display:table-row;">
+      <div class="labelCel">
+        <%= f.check_box :terms, :style => "width:20px;" %>
+      </div>
+      <div class="inputCel">
+        <label for="user_terms">By clicking on "Sign up" below, you are agreeing to the <%= link_to "Privacy Policy / Terms", terms_path %>.</label><br/><br/>
+      </div>
+      <div class="hintCel smallHint">
+
+      </div>
+    </div>
+
+    <div style="display:table-row;">
       <div class="labelCel"></div>
       <div class="inputCel">
         <%= f.submit "Sign up", :class => "button" %>
