--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <nav class="round">
-    <ul>
+    <ul style="padding-top: 8px;">
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Privacy Policy / Terms", terms_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
