--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -7,14 +7,15 @@
 
 body {
     background: black;
-    /*background-image: url("/images/background.jpg")  ;*/
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-image: url("/images/background.png")  ;
+    /*background-attachment: fixed;*/
+    background-repeat: repeat-x;
+    background-position: top;
 }
 
 header {
     padding-top: 20px;
+    height: 172px;
 }
 
 header img {
@@ -440,6 +441,7 @@ input .checkbox{
 
 .logo{
     /*width: 350px;*/
+    background: transparent;
 }
 
 .smallHint{
