--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -5,6 +5,11 @@
 
 <% else %>
 
-    <%= render 'users/home_guest' %>
+   <div align="center">
+   <img id="image"/>
+   <div id="name"></div>
+   </div>
+
+   <%= render 'users/home_guest' %>
 
 <% end %>
