--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,29 @@
 <header>
     <%= logo %>
-    <nav class="round">
+    <div style="float:right;">
+      <nav class="round">
         <ul>
-            <li><%= link_to "Home", home_path %></li>
-            <% if signed_in? %>
-                <li><%= link_to "Users", users_path %></li>
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Geiger", geigercounter_user_path(current_user) %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
-            <% end %>
-            <% if !signed_in? %>
-                <li><%= link_to "Sign in", signin_path %></li>
-            <% end %>
+          <li><%= link_to "Home", home_path %></li>
+          <% if signed_in? %>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Geiger", geigercounter_user_path(current_user) %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+          <% end %>
+          <% if !signed_in? %>
+              <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>
         </ul>
-    </nav>
+      </nav>
+      <!--<div style="clear:both; padding-top: 5px;">-->
+        <!--<a href='javascript:-->
+                <!--var w=650;-->
+                <!--var h=450;-->
+                <!--var left = (screen.width/2)-(w/2);-->
+                <!--var top = (screen.height/2)-(h/2);-->
+                <!--var popupWindow = window.open("https://graph.facebook.com/oauth/authorize?req_perms=emai&client_id=216988828315277&scope=email,offline_access&redirect_uri=http://rob.wildgigs.com/handlefbcode","popupWindow","toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no,menubar=1,resizable=1,width="+w+",height="+h+"top="+top+", left="+left);' style="margin-right: 5px;" ><img src="/images/fb_login_icon.gif"  style="border: 0px solid white; " height="18" width="128"/></a>-->
+      <!--</div>-->
+    </div>
+
 </header>
