--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,12 +29,15 @@
           <% end %>
         </ul>
       </nav>
-      <div style="clear:both; padding-top: 5px;">
+      <% if !signed_in? %>
+      <div style="clear:both; padding-top: 0px; margin-top: 10px; text-align: right;">
+        <br/>
         <a href='javascript:var popupWindow = window.open(link, "popupWindow", "toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, menubar=1, resizable=1, width="+winWidth+",height="+winHeigh+"top="+top+", left="+left);'
            style="margin-right: 5px;" >
-          <img src="/images/fb_login_icon.gif"  style="border: 0px solid white; " height="18" width="128"/>
+          <img src="/images/fb_login_icon.gif"  style="border: 0px solid white; padding: 0;" />
         </a>
       </div>
+      <% end %>
     </div>
 
 </header>
