--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,20 @@
 <% unless @feed_items.empty? %>
-  <div style="display: table;" class="measurements">
-    <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
-  </div>
-  <%= will_paginate @feed_items %>
+
+    <div id="fb-root"></div>
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script>
+      function shareOnFacebook(message){
+        FB.init({
+            appId:'216988828315277', cookie:true,
+            status:true, xfbml:true
+        });
+        FB.ui({ method: 'feed', message: message});
+      }
+    </script>
+
+    <div style="display: table;" class="measurements">
+        <%= render :partial => 'shared/feed_item', :collection => @feed_items %>
+    </div>
+    <%= will_paginate @feed_items %>
+
 <% end %>
