--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -15,12 +15,13 @@
       <%= feed_item.content %>
     </span><br/>
     <span class="timestamp">
-      Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
+      Posted <%= time_ago_in_words(feed_item.created_at) %> ago |
       <% if current_user?(feed_item.user) %>
             <%= link_to "delete", feed_item, :method => :delete,
-                                             :confirm => "You sure?",
-                                             :title => feed_item.content %>
+                                              :confirm => "You sure?",
+                                              :title => feed_item.content %> |
       <% end %>
+      Share on <a href="#" onclick="shareOnFacebook(<%= feed_item.spoken_measurement %>);">facebook</a>
     </span>
   </div>
 </div>
