--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -3,12 +3,15 @@
     <div id="fb-root"></div>
     <script src="http://connect.facebook.net/en_US/all.js"></script>
     <script>
-      function shareOnFacebook(message){
+      function shareOnFacebook(message, link){
         FB.init({
             appId:'216988828315277', cookie:true,
             status:true, xfbml:true
         });
-        FB.ui({ method: 'feed', message: message});
+        FB.ui({ method: 'feed',
+                link: link,
+                caption: 'caption',
+                description: message});
       }
     </script>
 
