--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -21,7 +21,8 @@
                                               :confirm => "You sure?",
                                               :title => feed_item.content %> |
       <% end %>
-      Share on <a href="#" onclick="shareOnFacebook('<%= feed_item.spoken_measurement %>');">facebook</a>
+      Share on <a href="#"
+                  onclick="shareOnFacebook('<%= feed_item.spoken_measurement %>', 'http://radioactive-map.com/measurements/<%=feed_item.name%>');">facebook</a>
     </span>
   </div>
 </div>
