--- a/app/views/measurements/show.html.erb
+++ b/app/views/measurements/show.html.erb
@@ -47,7 +47,42 @@
           </div>
         </div>
 
-        <div style="padding: 10px; border: 2px solid gray; margin-top: 10px;">
+        <div class="measure_content">
             <%= @measurement.content %>
         </div>
+
+        <% unless @measurement.comments.nil? %>
+            <% @measurement.comments.each do |comment| %>
+                <div class="measure_comment">
+                    <div class="measure_comment_gravatar">
+                        <%= link_to gravatar_for(comment.user), comment.user %>
+                    </div>
+                    <div class="measure_comment_content">
+                        <span >
+                            <%= comment.content %>
+                        </span><br/>
+                        <span class="timestamp">
+                            Posted <%= time_ago_in_words(comment.created_at) %> ago
+                        </span>
+                    </div>
+                </div>
+            <% end %>
+        <% end %>
+
+        <% if signed_in? %>
+        <div class="measure_comment_area" >
+          <%= form_for(:comment, :url => comment_measurement_path(@measurement)) do |f|  %>
+              <div>
+                <%= f.label :content, "Your comment" %>
+              </div>
+              <div class="field" >
+                <%= f.text_area :content, :maxlength => 240, :autocomplete => :off, :class => "measure_comment_txtarea round" %>
+              </div>
+              <div class="actions">
+                <%= f.submit "comment", :class => "button" %>
+              </div>
+          <% end %>
+        </div>
+        <% end %>
+
     </div>
