--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,7 +1,17 @@
 <h1>About</h1>
 <p>
-    Radioactive Map is a site for collecting data about radiation measurements on our planet.
-    You can easily post a radiation measurement for a special location on earth.
+    Radioactive Map is a social community for radiation measurements. 
+    You can easily post and comment a radiation measurement for a special location on earth.
+</p>
+<p align="center">
+    <img src="/images/measure-demo-1.jpg" alt="Measurement demo" style="border: 2px dashed gray; padding:5px;" />
+</p>
+<p>
+  Every Measurement have a unique URL/Link. You can comment Measurements and you can share
+  it on Facebook with your friends.
+</p>
+<p>
+  Here is my first Measurement: <a href="http://radioactive-map.com/measurements/sNQS0clNlJTM4KnnyP51Si1bHlNCs9xXXaCREjwM7O62O7Fc8gCpABvAUfHSJM">My first Measurement</a>
 </p>
 <p>
     This site is a beta version.
