--- a/app/views/measurements/show.html.erb
+++ b/app/views/measurements/show.html.erb
@@ -51,6 +51,10 @@
             <%= @measurement.content %>
         </div>
 
+        <div>
+          Share on <a href="#" onclick="shareOnFacebook('<%= @measurement.spoken_measurement %>', 'http://radioactive-map.com/measurements/<%=@measurement.name%>');">facebook</a>
+        </div>
+
         <% unless @measurement.comments.nil? %>
             <% @measurement.comments.each do |comment| %>
                 <div class="measure_comment">
