--- a/app/views/measurements/show.html.erb
+++ b/app/views/measurements/show.html.erb
@@ -64,7 +64,7 @@
             <%= @measurement.content %>
         </div>
 
-        <div>
+        <div class="measure_share_area">
           Share on <a href="#" onclick="shareOnFacebook('<%= @measurement.spoken_measurement %>', 'http://radioactive-map.com/measurements/<%=@measurement.name%>');">facebook</a>
         </div>
 
